<resources>
    <string name="app_name">Triber</string>
    <string name="app_logo">App Logo</string>
    <string name="email_text">Email</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="password_reset_email_sent_message">Password Reset Email Sent. Please follow
        the instructions in the email.</string>
    <string name="registration_successful_text">Registration Successful!</string>
    <string name="account_created_failed_update_account_details_error">Account Created but failed to
        update account details. Please login and retry again</string>
    <string name="back_button">Back Button</string>
    <string name="confirm_logout_title">Confirm Logout</string>
    <string name="confirm_logout_message">Are you sure you want to logout?</string>
    <string name="change_username_successful_text">Successfully updated username!</string>
    <string name="update_email_address_successful_text">Successfully updated email address!</string>
    <string name="update_email_address_unsuccessful_text">Failed to update account email address.
        Please check your internet connection and retry</string>
    <string name="update_password_successful_text">Successfully updated password!</string>
    <string name="current_password_text">Current Password</string>
    <string name="recipient_review_text">Recipient Review: (Min 50 characters)</string>
    <string name="error_changing_account_username">Failed to change account username.
        Please check your internet connection and retry</string>
    <string name="error_new_username_same_as_current_username">New username is same as current username</string>
    <string name="error_new_email_same_as_current_email">New email address is same as current email address</string>
    <string name="error_updating_account_password">Failed to update account password. Please check
        your internet connection and retry</string>
    <string name="error_too_many_requests">Too many consecutive authentication requests received.
        Please try again later"</string>
    <string name="default_notification_channel_id">1001</string>
    <string name="banner_image_text">Banner Image</string>
    <string name="cancel_text">Cancel</string>
    <string name="unknown_error">Oops, an unknown error occurred</string>
    <string name="confirm_exit_message">All information typed will be lost upon exit</string>
    <string name="no_location_recommendation_criteria_selected">Please select at least one location</string>
    <string name="error_missing_location_recommendation_criteria">Error occurred (Missing location criteria)!
        Please retry setting up recommendation criteria"</string>
    <string name="no_job_nature_recommendation_criteria_selected">Please select at least one job nature</string>
    <string name="recommendation_generation_info">Recommendation are generated based on two factor:
        \n1) User\'s recipient view and review history\n2) User\'s preferred recommendation criteria</string>
    <string name="no_faq_found_message">No FAQ Found</string>
    <string name="no_favorites_saved_text">No Favourites Saved</string>
    <string name="favorite_require_login_message">Login to view saved favourites</string>
    <string name="require_login_save_recipient_as_favorite_error">Login to save recipient as favourite</string>
    <string name="recipient_removed_from_favorite">Removed from favourite</string>
    <string name="recipient_added_to_favorite">Added to favourite</string>
    <string name="no_favorites_saved_message">Store and keep track of your favourite recipient</string>
    <string name="show_all_recipient_text">Show all Recipient</string>
    <string name="default_network_error">A network error (e.g. timeout, interrupted connection
        or unreachable host) has occurred.</string>
    <string name="google_sign_in_failed_error">The sign in attempt didn\'t succeed with the
        current account.</string>
    <string name="google_sign_in_internal_error">An internal error occurred. Retrying should
        resolve the problem.</string>
    <string name="google_sign_in_invalid_account_error">The client attempted to connect to the
        service with an invalid
        account name specified.</string>
    <string name="google_sign_in_api_not_connected_error">The client attempted to call a method from
        an API that failed to connect.</string>
    <string name="google_sign_in_currently_in_progress_error">A sign in process is currently in
        progress and the current one cannot continue.</string>
    <string name="google_sign_in_error">The operation failed with no more detailed information.</string>
    <string name="google_sign_in_interrupted_error">A blocking call was interrupted while waiting
        and did not run to completion.</string>
    <string name="google_sign_in_connection_suspended_during_call_error">The connection was suspended
        while the call was in-flight.</string>
    <string name="google_sign_in_reconnection_timed_out_error">The connection timed-out while
        attempting to re-connect.</string>
    <string name="google_sign_in_reconnection_timed_out_during_update_error">The connection timed-out
        while waiting for
        Google Play services to update.</string>
    <string name="google_sign_in_timeout_error">Timed out while awaiting the result.</string>
    <string name="submit_text">Submit</string>
    <string name="support_note_for_user">*** Kindly take note that the admin will contact you via
        the email you supplied as soon as
    possible. ***</string>
    <string name="invalid_title_error_text">Title must not be empty</string>
    <string name="invalid_message_error_text">Message must not be empty</string>
    <string name="feedback_message_submit_error">Failed to submit feedback message! Please check your
        internet connection and retry.</string>
    <string name="feedback_message_submit_success">Feedback submitted!</string>
    <string name="user_selected_location_recommendation_criteria">userSelectedLocationRecommendationCriteria</string>
    <string name="user_selected_job_nature_recommendation_criteria">userSelectedJobNatureRecommendationCriteria</string>
    <string name="has_set_recommendation_criteria">hasSetRecommendationCriteria</string>
    <string name="has_announcement_subscription">hasAnnouncementSubscription</string>
    <string name="has_reminder_subscription">hasReminderSubscription</string>
    <string name="has_asked_to_setup_device_notification_settings">hasAskedToSetupDeviceNotificationSettings</string>
    <string name="user_disable_reminder_notifications">userDisableReminderNotifications</string>
    <string name="user_disable_announcement_notifications">userDisableAnnouncementNotifications</string>
    <string name="recipient_item_last_fetch_timestamp">recipientItemLastFetchTimestamp</string>
    <string name="recipient_review_last_fetch_timestamp">recipientReviewLastFetchTimestamp</string>
    <string name="banner_last_fetch_timestamp">bannerLastFetchTimestamp</string>
    <string name="crowdFunding_last_fetch_timestamp">crowdFundingLastFetchTimestamp</string>
    <string name="faq_last_fetch_timestamp">faqLastFetchTimestamp</string>
    <string name="jobNature_last_fetch_timestamp">jobNatureLastFetchTimestamp</string>
    <string name="announcement_last_fetch_timestamp">announcementLastFetchTimestamp</string>
    <string name="favorite_last_fetch_timestamp">favoriteLastFetchTimestamp</string>
    <string name="recommendation_criteria_last_fetch_timestamp">recommendationCriteriaLastFetchTimestamp</string>
    <string name="xiaomi_notification_related_permission_needed_message">This app requires you to manually enable
        the <b>\"Autostart\"</b> and <b>\"Display pop-up windows while running in the background\"</b> permission
        in the app settings for notification to work properly.\n</string>
    <string name="app_permission_location_permission_required_message">Location permission required for using this feature.
        Please enable \"location permission\" under App Permissions.\n"</string>
    <string name="gps_permission_required_message">This feature requires GPS to work properly, do you want to enable it?\n</string>
    <string name="forgot_password_icon_text">forgot_password_icon</string>
    <string name="forgot_password_layout_title">Forgot Password</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="default_profile_picture_icon">default_profile_picture_icon</string>
    <string name="registration_layout_title">Registration</string>
    <string name="upload_a_profile_picture_text">Upload a Profile Picture</string>
    <string name="register_text">Register</string>
    <string name="invalid_username_error_text">Username should have maximum 20 characters in length</string>
    <string name="invalid_whitespace_error_text">No leading and trailing whitespace is allowed</string>
    <string name="invalid_confirm_password_error_text">Password does not match or is less than 6 characters in length</string>
    <string name="login_layout_title">Login</string>
    <string name="forgot_password_button_text">Forgot Password?</string>
    <string name="or_text">or</string>
    <string name="login_with_google_text">Login With Google</string>
    <string name="invalid_email_error_text">Invalid email</string>
    <string name="invalid_password_error_text">Password must be at least 6 characters in length.</string>
    <string name="announcement_title">Announcements</string>
    <string name="title_text">Title</string>
    <string name="deadline_date_text">Deadline Date (dd/mm/yyyy)</string>
    <string name="message_text">Message</string>
    <string name="reset_text">Reset</string>
    <string name="done_text">Done</string>
    <string name="channel_name">Default Notifications</string>
    <string name="channel_description">This channel is for receiving announcements and reminders</string>
    <string name="no_announcement_found_text">No announcement found</string>
    <string name="no_recipient_review_found_title">No Recipient Review Found</string>
    <string name="no_recipient_review_found_message">Be the first one to share your experience with the community!</string>
    <string name="start_review_text">Start Review</string>
    <string name="review_text">Review</string>
    <string name="direction_text">Direction</string>
    <string name="share_text">Share</string>
    <string name="favourite_text">Favourite</string>
    <string name="recommendation_empty">You have either viewed all recommended recipient or no
        recipient match the recommendation criteria selected. Change recommendation criteria or
        clear recommendation metadata to see more.</string>
    <string name="profile_picture_image">profile_picture_image</string>
    <string name="faq_text">FAQs</string>
    <string name="feedback_text">Feedback</string>
    <string name="logout_text">Logout</string>
    <string name="my_account_text">My Account</string>
    <string name="change_username_text">Change username</string>
    <string name="edit_profile_picture_text">Edit profile picture</string>
    <string name="update_email_address_text">Update email address</string>
    <string name="update_password_text">Update password</string>
    <string name="created_on_text"><i>Created On:</i></string>
    <string name="next_text">Next</string>
    <string name="criteria_step_one">Step 1 of 2</string>
    <string name="skip_text">Skip</string>
    <string name="criteria_step_two_title">Choose all the job nature that you like</string>
    <string name="select_all_text">Select All</string>
    <string name="criteria_step_two">Step 2 of 2</string>
    <string name="criteria_step_one_title">Choose which location you prefer to perform
    community service</string>
</resources>