<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="registrationViewmodel"
            type="com.example.communityserviceapp.ui.registration.RegistrationViewModel" />
    </data>

    <ScrollView
        style="@style/default_scrollview_style"
        tools:context=".ui.registration.RegistrationFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:background="@color/transparent"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_baseline_keyboard_backspace_grey_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profile_picture_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/default_profile_picture_icon"
                android:src="@drawable/ic_baseline_account_circle_grey_26dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/back_button" />

            <LinearLayout
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:background="@color/fifty_percent_of_gainsboro"
                app:layout_constraintTop_toBottomOf="@+id/profile_picture_image">

                <TextView
                    android:id="@+id/registration_layout_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center"
                    android:text="@string/registration_layout_title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_picture_image" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registration_email_textInputLayout"
                    android:layout_marginTop="28dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/registration_layout_title"
                    style="@style/custom_material_textinputlayout_style">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_email_textInputEditText"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email_text"
                        android:importantForAutofill="no"
                        android:text="@={registrationViewmodel.emailAddress}"
                        style="@style/custom_material_textinputedittext_style" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registration_username_textInputLayout"
                    android:layout_marginTop="10dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/registration_email_textInputLayout"
                    style="@style/custom_material_textinputlayout_style">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_username_textInputEditText"
                        android:hint="@string/username_text"
                        android:text="@={registrationViewmodel.username}"
                        android:inputType="textPersonName"
                        android:importantForAutofill="no"
                        style="@style/custom_material_textinputedittext_style" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registration_password_textInputLayout"
                    android:layout_marginTop="10dp"
                    app:passwordToggleEnabled="true"
                    app:errorIconDrawable="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/registration_username_textInputLayout"
                    style="@style/custom_material_textinputlayout_style">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_password_textInputEditText"
                        android:inputType="textPassword"
                        android:hint="@string/password_text"
                        android:text="@={registrationViewmodel.password}"
                        android:importantForAutofill="no"
                        style="@style/custom_material_textinputedittext_style" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registration_confirm_password_textInputLayout"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="38dp"
                    app:passwordToggleEnabled="true"
                    app:errorIconDrawable="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/registration_password_textInputLayout"
                    style="@style/custom_material_textinputlayout_style">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_confirm_password_textInputEditText"
                        android:inputType="textPassword"
                        android:hint="@string/confirm_password_text"
                        android:text="@={registrationViewmodel.confirmPassword}"
                        android:importantForAutofill="no"
                        style="@style/custom_material_textinputedittext_style" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/upload_profile_picture_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/upload_a_profile_picture_text"
                android:textSize="13sp"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view"
                app:layout_constraintBottom_toTopOf="@id/register_button"
                style="@style/outlined_material_button_style" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="45dp"
                android:enabled="@{registrationViewmodel.isFormValid}"
                android:text="@{registrationViewmodel.enableLoadingProgressBar ? null : @string/register_text}"
                android:textSize="15sp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upload_profile_picture_button"
                style="@style/material_button_style" />

            <ProgressBar
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:elevation="5dp"
                android:indeterminateTint="@color/white"
                showView="@{registrationViewmodel.enableLoadingProgressBar}"
                app:layout_constraintBottom_toBottomOf="@+id/register_button"
                app:layout_constraintEnd_toEndOf="@+id/register_button"
                app:layout_constraintStart_toStartOf="@+id/register_button"
                app:layout_constraintTop_toTopOf="@+id/register_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>