<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginViewmodel"
            type="com.example.communityserviceapp.ui.login.LoginViewModel" />
    </data>

    <ScrollView
        style="@style/default_scrollview_style"
        android:background="@color/app_logo_background"
        tools:context=".ui.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:background="@color/transparent"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_baseline_keyboard_backspace_grey_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/app_logo"
                android:contentDescription="@string/app_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/back_button"
                app:layout_constraintBottom_toTopOf="@id/login_layout_title"/>

            <TextView
                android:id="@+id/login_layout_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_layout_title"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintBottom_toTopOf="@id/login_email_textInputLayout"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email_textInputLayout"
                android:layout_marginTop="25dp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_layout_title"
                app:layout_constraintBottom_toTopOf="@id/login_password_textInputLayout"
                style="@style/custom_material_textinputlayout_style">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email_textInputEditText"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_text"
                    android:text="@={loginViewmodel.emailAddress}"
                    style="@style/custom_material_textinputedittext_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_textInputLayout"
                android:layout_marginTop="12dp"
                app:passwordToggleEnabled="true"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_email_textInputLayout"
                app:layout_constraintBottom_toTopOf="@id/forgot_password_button"
                style="@style/custom_material_textinputlayout_style">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_textInputEditText"
                    android:inputType="textPassword"
                    android:hint="@string/password_text"
                    android:text="@={loginViewmodel.password}"
                    style="@style/custom_material_textinputedittext_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgot_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:text="@string/forgot_password_button_text"
                android:textSize="13sp"
                android:textColor="@color/bright_orange"
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_password_textInputLayout"
                app:layout_constraintBottom_toTopOf="@id/register_button"
                style="@style/Widget.MaterialComponents.Button.TextButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:text="@{loginViewmodel.enableLoginProgressBar ? null : @string/login_layout_title}"
                android:textSize="14sp"
                android:enabled="@{loginViewmodel.isFormValid}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/register_button"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_button"
                style="@style/material_button_style" />

            <ProgressBar
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:elevation="8dp"
                android:indeterminateTint="@color/white"
                app:showView="@{loginViewmodel.enableLoginProgressBar}"
                app:layout_constraintBottom_toBottomOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="@+id/login_button"
                app:layout_constraintStart_toStartOf="@+id/login_button"
                app:layout_constraintTop_toTopOf="@+id/login_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="30dp"
                android:text="@string/register_text"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/login_button"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_button"
                app:layout_constraintBottom_toTopOf="@id/right_horizontal_line"
                style="@style/outlined_material_button_style" />

            <View
                android:id="@+id/left_horizontal_line"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="22dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="25dp"
                android:background="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/register_button"
                app:layout_constraintTop_toBottomOf="@id/login_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_text"
                android:textSize="14sp"
                android:layout_marginTop="12dp"
                app:layout_constraintRight_toLeftOf="@id/right_horizontal_line"
                app:layout_constraintLeft_toRightOf="@id/left_horizontal_line"
                app:layout_constraintTop_toBottomOf="@id/login_button"/>

            <View
                android:id="@+id/right_horizontal_line"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="22dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="27dp"
                android:background="@color/black"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/left_horizontal_line"
                app:layout_constraintTop_toBottomOf="@id/register_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_with_google_button"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="45dp"
                android:layout_marginTop="20dp"
                android:text="@{loginViewmodel.enableGoogleLoginProgressBar ? null : @string/login_with_google_text}"
                app:icon="@drawable/ic_google_logo"
                app:iconSize="30dp"
                app:iconTint="@null"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/login_button"
                app:layout_constraintTop_toBottomOf="@id/left_horizontal_line"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/outlined_material_button_style" />

            <ProgressBar
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:elevation="8dp"
                android:indeterminateTint="@color/colorPrimary"
                app:showView="@{loginViewmodel.enableGoogleLoginProgressBar}"
                app:layout_constraintBottom_toBottomOf="@+id/login_with_google_button"
                app:layout_constraintEnd_toEndOf="@+id/login_with_google_button"
                app:layout_constraintStart_toStartOf="@+id/login_with_google_button"
                app:layout_constraintTop_toTopOf="@+id/login_with_google_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>